--- a/index.html
+++ b/index.html
@@ -28,23 +28,43 @@
 			<table>
 				<tr>
 					<td>Width:</td>
-					<td><input id="widthInput" type="text" name="width" value="30"></td>
+					<td>
+						<div class="slidecontainer">
+							<input type="range" min="1" max="100" value="30" class="slider" id="widthSlider">
+						</div>
+					</td>
 				</tr>
 				<tr>
 					<td>Height:</td>
-					<td><input id="heightInput" type="text" name="height" value="30"></td>
+					<td>
+						<div class="slidecontainer">
+							<input type="range" min="1" max="100" value="30" class="slider" id="heightSlider">
+						</div>
+					</td>
 				</tr>
 				<tr>
 					<td>Districts:</td>
-					<td><input id="districtsInput" type="text" name="districts" value="30"></td>
+					<td>
+						<div class="slidecontainer">
+							<input type="range" min="1" max="100" value="30" class="slider" id="districtSlider">
+						</div>
+					</td>
 				</tr>
 				<tr>
 					<td>Voter %:</td>
-					<td><input id="votersInput" type="text" name="voterRatio" value="30"></td>
+					<td>
+						<div class="slidecontainer">
+							<input type="range" min="1" max="100" value="30" class="slider" id="voterSlider">
+						</div>
+					</td>
 				</tr>
 				<tr>
 					<td># Parties:</td>
-					<td><input id="partiesInput" type="text" name="parties" value="2"></td>
+					<td>
+						<div class="slidecontainer">
+							<input type="range" min="1" max="3" value="2" class="slider" id="partySlider">
+						</div>
+					</td>
 				</tr>
 				<tr>
 					<td colspan="2"><input id="menuStart" type="submit" value="Start"></td>
