Undo move button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<h2 id="currentTurnLabel"></h2><br/>
 				<h2 id="moveCounter"></h2><br/>
 				<span id="moveCounterLabel">moves remaining</span><br/>
-				<input id="endTurnButton" type="submit" value="End Turn">
+				<input id="endTurnButton" type="submit" value="End Turn"><br/>
+				<input id="undoButton" type="submit" value="Undo">
 			</div>
 		</div>
 
@@ -31,11 +32,11 @@
 					<td>Width:</td>
 					<td>
 						<div class="slidecontainer">
-							<input type="range" min="1" max="100" value="30" class="slider" id="widthSlider">
+							<input type="range" min="1" max="100" value="50" class="slider" id="widthSlider">
 						</div>
 					</td>
 					<td>
-						<span id="widthLabel">30</span>
+						<span id="widthLabel">50</span>
 					</td>
 				</tr>
 				<tr>
