Party color generator

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 	</head>
 	<body>
 		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="js/ntc.js"></script>
 		<script type="text/javascript" src="js/game.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/ai.js"></script>
 		<script type="text/javascript" src="js/utilities.js"></script>
+		<script type="text/javascript" src="js/colors.js"></script>
 		<script type="text/javascript" src="js/piechart.js"></script>
 
 		<div class="container">
@@ -77,7 +79,7 @@
 					<td># Parties:</td>
 					<td>
 						<div class="slidecontainer">
-							<input type="range" min="1" max="3" value="2" class="slider" id="partySlider">
+							<input type="range" min="1" max="10" value="2" class="slider" id="partySlider">
 						</div>
 					</td>
 					<td>
